brain/sources/prod-metadata/objects/Interview__c/fields/Request_Raised__c.field-meta.xml
<CustomField>
    <fullName>Request_Raised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Raised</label>
    <type>Checkbox</type>
</CustomField>