brain/sources/prod-metadata/objects/Interview__c/fields/Resistance_R__c.field-meta.xml
<CustomField>
    <fullName>Resistance_R__c</fullName>
    <label>Resistance R</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>