brain/sources/prod-metadata/objects/Interview__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <label>Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
            <value>
                <fullName>Fourth</fullName>
            </value>
            <value>
                <fullName>Fifth</fullName>
            </value>
            <value>
                <fullName>Sixth</fullName>
            </value>
            <value>
                <fullName>Seventh</fullName>
            </value>
            <value>
                <fullName>Eighth</fullName>
            </value>
            <value>
                <fullName>Ninth</fullName>
            </value>
            <value>
                <fullName>Tenth</fullName>
            </value>
            <value>
                <fullName>Eleventh</fullName>
            </value>
            <value>
                <fullName>Twelfth</fullName>
            </value>
            <value>
                <fullName>Thirteenth</fullName>
            </value>
            <value>
                <fullName>Fourteenth</fullName>
            </value>
            <value>
                <fullName>Fifteenth</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>