brain/sources/prod-metadata/objects/Interview__c/fields/Round_Info__c.field-meta.xml
<CustomField>
    <fullName>Round_Info__c</fullName>
    <label>Round Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hiring Manager</fullName>
            </value>
            <value>
                <fullName>Leet code style Coding</fullName>
            </value>
            <value>
                <fullName>System Design</fullName>
            </value>
            <value>
                <fullName>Coding Fronted</fullName>
            </value>
            <value>
                <fullName>Backend Coding</fullName>
            </value>
            <value>
                <fullName>AI/ML Coding</fullName>
            </value>
            <value>
                <fullName>Offer Negotiation</fullName>
            </value>
            <value>
                <fullName>Final Round</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Introduction Call</fullName>
            </value>
            <value>
                <fullName>Technical Discussion</fullName>
            </value>
            <value>
                <fullName>Executive Round</fullName>
            </value>
            <value>
                <fullName>Behavioral Round</fullName>
            </value>
            <value>
                <fullName>Coding Round</fullName>
            </value>
            <value>
                <fullName>Healthcare Round</fullName>
            </value>
            <value>
                <fullName>Preparation Round</fullName>
            </value>
            <value>
                <fullName>Team Matching Round</fullName>
            </value>
            <value>
                <fullName>Coding Frontend</fullName>
                <isActive>false</isActive>
                <label>Coding Frontend</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>