brain/sources/prod-metadata/objects/Interview__c/fields/Round_Info_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Round_Info_if_Other__c</fullName>
    <label>Round Info if (Other)</label>
    <type>TextArea</type>
</CustomField>