brain/sources/prod-metadata/objects/Interview__c/fields/Round_Multiplier_New__c.field-meta.xml
<CustomField>
    <fullName>Round_Multiplier_New__c</fullName>
    <label>Round Multiplier New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>