brain/sources/prod-metadata/objects/Interview__c/fields/Round_ranking_reason__c.field-meta.xml
<CustomField>
    <fullName>Round_ranking_reason__c</fullName>
    <label>Round ranking reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>