brain/sources/prod-metadata/objects/Interview__c/fields/Salary_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Salary_Compensation__c</fullName>
    <label>Salary Compensation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>