brain/sources/prod-metadata/objects/Interview__c/fields/Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date__c</fullName>
    <inlineHelpText>Schedule Date for interview</inlineHelpText>
    <label>Schedule Date</label>
    <type>Date</type>
</CustomField>