brain/sources/prod-metadata/objects/Interview__c/fields/Scheduled_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Minutes__c</fullName>
    <formula>(
  /* END in minutes */
  (MOD(VALUE(LEFT(TEXT(EndTime__c), 2)), 12) * 60)
  +
  VALUE(MID(TEXT(EndTime__c), 4, 2))
  +
  IF(RIGHT(TEXT(EndTime__c), 2) = &quot;PM&quot;, 720, 0)
)
-
(
  /* START in minutes */
  (MOD(VALUE(LEFT(TEXT(StartTime__c), 2)), 12) * 60)
  +
  VALUE(MID(TEXT(StartTime__c), 4, 2))
  +
  IF(RIGHT(TEXT(StartTime__c), 2) = &quot;PM&quot;, 720, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>