brain/sources/prod-metadata/objects/Interview__c/fields/Score_After_AIML__c.field-meta.xml
<CustomField>
    <fullName>Score_After_AIML__c</fullName>
    <label>Score After AIML</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>