brain/sources/prod-metadata/objects/Interview__c/fields/Score_After_Backend__c.field-meta.xml
<CustomField>
    <fullName>Score_After_Backend__c</fullName>
    <label>Score After Backend</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>