brain/sources/prod-metadata/objects/Interview__c/fields/Score_After_SysDesign__c.field-meta.xml
<CustomField>
    <fullName>Score_After_SysDesign__c</fullName>
    <label>Score After SysDesign</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>