brain/sources/prod-metadata/objects/Interview__c/fields/Score_Before_FinalRnd__c.field-meta.xml
<CustomField>
    <fullName>Score_Before_FinalRnd__c</fullName>
    <label>Score Before FinalRnd</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>