brain/sources/prod-metadata/objects/Interview__c/fields/Score_Before_Overall__c.field-meta.xml
<CustomField>
    <fullName>Score_Before_Overall__c</fullName>
    <label>Score Before Overall</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>