brain/sources/prod-metadata/objects/Interview__c/fields/Score_Before_SysDesign__c.field-meta.xml
<CustomField>
    <fullName>Score_Before_SysDesign__c</fullName>
    <label>Score Before SysDesign</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>