brain/sources/prod-metadata/objects/Interview__c/fields/Slack_Thread_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Slack_Thread_Timestamp__c</fullName>
    <label>Slack Thread Timestamp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>