brain/sources/prod-metadata/objects/Interview__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time(Do Not Use)</label>
    <type>Time</type>
</CustomField>