brain/sources/prod-metadata/objects/Interview__c/fields/Start_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_Text__c</fullName>
    <formula>IF(
VALUE(LEFT(TEXT(Start_Time__c), 2)) &gt;= 12,
TEXT(VALUE(LEFT(TEXT(Start_Time__c), 2)) - 12) &amp; &quot;:&quot; &amp; MID(TEXT(Start_Time__c), 4, 2) &amp; &quot; PM&quot;,
IF(
VALUE(LEFT(TEXT(Start_Time__c), 2)) = 0,
&quot;12:&quot; &amp; MID(TEXT(Start_Time__c), 4, 2) &amp; &quot; AM&quot;,
LEFT(TEXT(Start_Time__c), 5) &amp; &quot; AM&quot;
)
)</formula>
    <label>Start Time Text</label>
    <type>Text</type>
</CustomField>