brain/sources/prod-metadata/objects/Interview__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Times</valueSetName>
    </valueSet>
</CustomField>