brain/sources/prod-metadata/objects/Interview__c/fields/Status_New_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_New_Reason__c</fullName>
    <label>Status  Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interview_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candidate requested change</fullName>
            </value>
            <value>
                <fullName>Interviewer requested change</fullName>
            </value>
            <value>
                <fullName>Company / Hiring Manager requested change</fullName>
            </value>
            <value>
                <fullName>Scheduling conflict</fullName>
            </value>
            <value>
                <fullName>Time zone confusion</fullName>
            </value>
            <value>
                <fullName>Technical issue</fullName>
            </value>
            <value>
                <fullName>Candidate not prepared</fullName>
            </value>
            <value>
                <fullName>Panel unavailable</fullName>
            </value>
            <value>
                <fullName>Emergency / personal reason</fullName>
            </value>
            <value>
                <fullName>Candidate withdrew</fullName>
            </value>
            <value>
                <fullName>Company cancelled role</fullName>
            </value>
            <value>
                <fullName>Position filled</fullName>
            </value>
            <value>
                <fullName>Duplicate interview</fullName>
            </value>
            <value>
                <fullName>Candidate not eligible</fullName>
            </value>
            <value>
                <fullName>Candidate no longer interested</fullName>
            </value>
            <value>
                <fullName>Internal team unavailable</fullName>
            </value>
            <value>
                <fullName>Interviewer unavailable</fullName>
            </value>
            <value>
                <fullName>Technical / system issue</fullName>
            </value>
            <value>
                <fullName>Candidate no show</fullName>
            </value>
            <value>
                <fullName>Interviewer no show</fullName>
            </value>
            <value>
                <fullName>Candidate joined late beyond cutoff</fullName>
            </value>
            <value>
                <fullName>Interviewer joined late beyond cutoff</fullName>
            </value>
            <value>
                <fullName>Wrong meeting link / access issue</fullName>
            </value>
            <value>
                <fullName>Internet / technical issue</fullName>
            </value>
            <value>
                <fullName>Time zone misunderstanding</fullName>
            </value>
            <value>
                <fullName>Candidate unreachable</fullName>
            </value>
            <value>
                <fullName>Interviewer unreachable</fullName>
            </value>
            <value>
                <fullName>Emergency / personal issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>