brain/sources/prod-metadata/objects/Interview__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Outcome Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interview_Outcome__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Candidate Issue</fullName>
            </value>
            <value>
                <fullName>Support Issue</fullName>
            </value>
            <value>
                <fullName>Network Issue</fullName>
            </value>
            <value>
                <fullName>AI Issue</fullName>
            </value>
            <value>
                <fullName>Company Issue</fullName>
            </value>
            <value>
                <fullName>Work Auth/Visa Mismatch</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>