brain/sources/prod-metadata/objects/Interview__c/fields/Status_Reason_Comment__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason_Comment__c</fullName>
    <label>Status Reason Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>