brain/sources/prod-metadata/objects/Interview__c/fields/Submission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Submission_Rate__c</fullName>
    <description>Snapshot of the Submitted Bill Rate at the time of interview creation. Preserved even if rates change later. Used for historical margin reporting.</description>
    <inlineHelpText>Auto-populated from Job Submission Submitted Bill Rate when interview is created. Snapshot preserved for historical reporting accuracy.</inlineHelpText>
    <label>Submission Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>