brain/sources/prod-metadata/objects/Interview__c/fields/Support_not_provided_reason__c.field-meta.xml
<CustomField>
    <fullName>Support_not_provided_reason__c</fullName>
    <label>Support not provided reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>