brain/sources/prod-metadata/objects/Interview__c/fields/Support_Notes__c.field-meta.xml
<CustomField>
    <fullName>Support_Notes__c</fullName>
    <label>Support Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>