brain/sources/prod-metadata/objects/Interview__c/fields/Unique_Interview_Month_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Interview_Month_Key__c</fullName>
    <formula>Candidate__c &amp; &quot;|&quot; &amp;  Company__c  &amp; &quot;|&quot; &amp; TEXT(YEAR( Date_of_Interview__c )) &amp; &quot;|&quot; &amp; TEXT(MONTH(Date_of_Interview__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Interview Month Key</label>
    <type>Text</type>
</CustomField>