brain/sources/prod-metadata/objects/Interview__c/fields/User_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>User_Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee</relationshipName>
    <type>Lookup</type>
</CustomField>