brain/sources/prod-metadata/objects/Interview__c/fields/User_Initiated_On__c.field-meta.xml
<CustomField>
    <fullName>User_Initiated_On__c</fullName>
    <label>User Initiated On</label>
    <type>DateTime</type>
</CustomField>