brain/sources/prod-metadata/objects/Interview__c/fields/varPreferred_support_person__c.field-meta.xml
<CustomField>
    <fullName>varPreferred_support_person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred support person TL</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Interviews (Preferred support person TL)</relationshipLabel>
    <relationshipName>Interviews3</relationshipName>
    <type>Lookup</type>
</CustomField>