brain/sources/prod-metadata/objects/Interview__c/fields/Velocity_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Velocity_Alignment__c</fullName>
    <label>Velocity Alignment</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>