brain/sources/prod-metadata/objects/Interview__c/fields/Velocity_EMA_FinalRnd__c.field-meta.xml
<CustomField>
    <fullName>Velocity_EMA_FinalRnd__c</fullName>
    <label>Velocity EMA FinalRnd</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>