brain/sources/prod-metadata/objects/Interview__c/fields/Velocity_EMA_SysDesign__c.field-meta.xml
<CustomField>
    <fullName>Velocity_EMA_SysDesign__c</fullName>
    <label>Velocity EMA SysDesign</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>