brain/sources/prod-metadata/objects/Interview__c/fields/Velocity_Factor_Fvel__c.field-meta.xml
<CustomField>
    <fullName>Velocity_Factor_Fvel__c</fullName>
    <label>Velocity Factor Fvel</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>