brain/sources/prod-metadata/objects/Interview__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proxy Support</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>invendors</relationshipName>
    <type>Lookup</type>
</CustomField>