brain/sources/prod-metadata/objects/Interview__c/fields/Vendor_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Feedback__c</fullName>
    <label>Vendor Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>