brain/sources/prod-metadata/objects/Interview__c/fields/View_Recording__c.field-meta.xml
<CustomField>
    <fullName>View_Recording__c</fullName>
    <formula>HYPERLINK(&quot;/apex/RecordingViewer?id=&quot; &amp; Id, &quot;View Recording&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Recording</label>
    <type>Text</type>
</CustomField>