brain/sources/prod-metadata/objects/Interview__c/fields/Volatility_Damp_Fv__c.field-meta.xml
<CustomField>
    <fullName>Volatility_Damp_Fv__c</fullName>
    <label>Volatility Damp Fv</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>