brain/sources/prod-metadata/objects/Interview__c/fields/Volatility_Sigma__c.field-meta.xml
<CustomField>
    <fullName>Volatility_Sigma__c</fullName>
    <label>Volatility Sigma</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>