brain/sources/prod-metadata/objects/Interview__c/fields/Weighted_Credit__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Credit__c</fullName>
    <formula>IF(
    ISPICKVAL( Interview_Status__c , &quot;Completed&quot;),
    Base_Credit__c * Round_Multiplier_New__c,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>