brain/sources/prod-metadata/objects/Interview__c/fields/Weighted_Credit_New__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Credit_New__c</fullName>
    <label>Weighted Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>