brain/sources/prod-metadata/objects/Interview__c/fields/Why_not_eligible__c.field-meta.xml
<CustomField>
    <fullName>Why_not_eligible__c</fullName>
    <label>Why not eligible?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>