brain/sources/prod-metadata/objects/Interview__c/fields/Zeta_Applied__c.field-meta.xml
<CustomField>
    <fullName>Zeta_Applied__c</fullName>
    <label>Zeta Applied</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>