brain/sources/prod-metadata/objects/Interview__c/fields/Zoom_Meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Meeting_Id__c</fullName>
    <label>Zoom Meeting Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>