brain/sources/prod-metadata/objects/Interview__c/fields/Zoom_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Passcode__c</fullName>
    <label>Zoom Passcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>