brain/sources/prod-metadata/objects/Interview__c/fields/Zoom_Start_URL__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Start_URL__c</fullName>
    <label>Zoom Start URL</label>
    <type>Url</type>
</CustomField>