brain/sources/prod-metadata/objects/Interview__c/validationRules/Edit_Interview_Support_Person.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_Interview_Support_Person</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

    ISCHANGED(Interview_Support_Person__c),

    NOT($Permission.Edit_Interview_Support_Person),

    /* Apply only for Scheduled / Completed */
    OR(
        ISPICKVAL(Interview_Status__c, &quot;Scheduled&quot;),
        ISPICKVAL(Interview_Status__c, &quot;Completed&quot;)
    )

)</errorConditionFormula>
    <errorDisplayField>Interview_Support_Person__c</errorDisplayField>
    <errorMessage>You are not authorized to change the Interview Support Person</errorMessage>
</ValidationRule>