brain/sources/prod-metadata/objects/Interview__c/validationRules/Interview_Candidate_OR_Lead_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Interview_Candidate_OR_Lead_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Interview_Source__c,&apos;B2B Requirement&apos;) &amp;&amp; ISBLANK(Candidate__c) &amp;&amp; ISBLANK(Lead__c)</errorConditionFormula>
    <errorMessage>Either Candidate or Lead must be linked for B2B Interview.</errorMessage>
</ValidationRule>