brain/sources/prod-metadata/objects/Interview__c/validationRules/Offer_Requires_OfferLetterDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_Requires_OfferLetterDate</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Interview_Status__c, &quot;Offer Received&quot;),
    ISBLANK(Offer_Letter_Date__c)
)</errorConditionFormula>
    <errorMessage>Offer Letter Date must be populated before moving Interview Status to &apos;Offer Received&apos;.</errorMessage>
</ValidationRule>