brain/sources/prod-metadata/objects/Interview__c/validationRules/Prevent_Manual_Ghosted.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Manual_Ghosted</fullName>
    <active>true</active>
    <description>Users should not be allowed to select interview outcome as ghosted manually as it is updated using flow.</description>
    <errorConditionFormula>AND(
    ISCHANGED( Interview_Outcome__c ),
    ISPICKVAL( Interview_Outcome__c , &quot;Ghosted&quot;),
    NOT(IsValidated__c)
)</errorConditionFormula>
    <errorDisplayField>Interview_Outcome__c</errorDisplayField>
    <errorMessage>Interview Outcome cannot be set to Ghosted manually. This value is system-managed and is updated automatically after 14 days from the Date of Interview.</errorMessage>
</ValidationRule>