brain/sources/prod-metadata/objects/Interview__c/validationRules/Require_Comment_For_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Comment_For_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status_New_Reason__c, &quot;Other&quot;),
  ISBLANK(Status_Reason_Comment__c)
)</errorConditionFormula>
    <errorDisplayField>Status_Reason_Comment__c</errorDisplayField>
    <errorMessage>Status Reason Comment is required  when Status Reason is Other.</errorMessage>
</ValidationRule>