brain/sources/prod-metadata/objects/Interview__c/validationRules/Requires_Status_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Requires_Status_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL(Interview_Status__c, &quot;Rescheduled&quot;),
    ISPICKVAL(Interview_Status__c, &quot;Cancelled&quot;),
    ISPICKVAL(Interview_Status__c, &quot;No Show&quot;)
  ),
  ISPICKVAL(Status_New_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status_New_Reason__c</errorDisplayField>
    <errorMessage>Status  Reason is required when Interview Status is Rescheduled, Cancelled, or No Show</errorMessage>
</ValidationRule>